# leptos-devtools

./: Cargo.toml  README.md
devtools/: Cargo.toml
devtools/src/: lib.rs
example/: Cargo.toml
example/src/: main.rs
examples/router/: Cargo.toml
examples/router/src/: api.rs  lib.rs  main.rs
extension/: package.json
extension/background/: background.ts
extension/content/: content.ts
extension/devtools/: devtools.ts
extension/utils/: bridge.ts
extension_api/: Cargo.toml
extension_devtools/: Cargo.toml  index.html
extension_devtools/src/: main.rs  message.rs
extension_devtools/src/components/: aside.rs  aside_component.rs  aside_props.rs  component_node.rs  crumb.rs
