[workspace]
resolver = "2"
members = ["devtools", "example", "extension_api", "extension_devtools"]
exclude = ["examples"]

[workspace.package]
version = "0.0.1"

[workspace.dependencies]
leptos_devtools = { path = "./devtools", version = "0.0.1" }
leptos_devtools_extension_api = { path = "./extension_api", version = "0.0.1" }
tracing = "0.1.37"
serde = "1.0.188"
wasm-bindgen = "0.2.93"
