[package]
publish = false
name = "extension_devtools"
version = "0.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
leptos_devtools_extension_api = { path = "../extension_api" }
chrome-wasm-bindgen = "0.0.1"
leptos = { git = "https://github.com/leptos-rs/leptos.git", features = ["csr"] }
leptos_meta = { git = "https://github.com/leptos-rs/leptos.git" }
wasm-bindgen.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json = "1.0.107"
tracing.workspace = true

[features]
development = []
