[package]
name = "router"
version = "0.1.0"
edition = "2021"

[profile.release]
codegen-units = 1
lto = true

[dependencies]
console_log = "1"
leptos = { version = "0.7.0-rc", features = ["csr", "nightly", "tracing"] }
leptos_router = { version = "0.7.0-rc", features = ["nightly"] }
leptos_router_macro = "0.7.0-rc"
serde = { version = "1", features = ["derive"] }
futures = "0.3"
console_error_panic_hook = "0.1.7"
leptos_devtools = { path = "../../devtools" }
tracing-subscriber = "0.3.18"
tracing-subscriber-wasm = "0.1.0"
tracing = "0.1.40"

[dev-dependencies]
wasm-bindgen-test = "0.3"